test/Dialect/LLZK/array_write_fail.llzk
// RUN: llzk-opt %s -split-input-file -verify-diagnostics

llzk.func @arr_constant_index() -> !llzk.array<3 x index> {
  %a = index.constant 45
  %b = index.constant 214 // expected-note {{prior use here}}
  %c = index.constant 2
  %r = llzk.new_array %a, %b, %c : !llzk.array<3 x index>
  // expected-error@+1 {{use of value '%b' expects different type than prior uses: '!llzk.array<3 x index>' vs 'index'}}
  llzk.writearr %b[%c] = %b : !llzk.array<3 x index>, index
  return %r: !llzk.array<3 x index>
}
// -----

llzk.func @arr_mix_index(%a: index, %b: index) -> !llzk.array<4 x index> {
  %c = index.constant 324
  %d = index.constant 999 
  %i = index.constant 0
  %r = llzk.new_array %a, %b, %c, %d: !llzk.array<4 x index> // expected-note {{prior use here}}
  // expected-error@+1 {{use of value '%r' expects different type than prior uses: 'index' vs '!llzk.array<4 x index>'}}
  llzk.writearr %r[%r] = %b : !llzk.array<4 x index>, index
  return %r: !llzk.array<4 x index>
}
// -----

llzk.func @arr_mix_index(%a: index, %b: index) -> !llzk.array<4 x index> {
  %c = index.constant 324
  %d = index.constant 999 
  %i = index.constant 0
  %f = llzk.constfelt 6744573456376 // expected-note {{prior use here}}
  %r = llzk.new_array %a, %b, %c, %d: !llzk.array<4 x index>
  // expected-error@+1 {{use of value '%f' expects different type than prior uses: 'index' vs '!llzk.felt'}}
  llzk.writearr %r[%f] = %b : !llzk.array<4 x index>, index
  return %r: !llzk.array<4 x index>
}
// -----

llzk.func @arr_mix_index(%a: !llzk.felt, %b: !llzk.felt) -> !llzk.array<4 x !llzk.felt> {
  %c = llzk.constfelt 324
  %d = llzk.constfelt 999 
  %i = index.constant 0
  %v = index.constant 5751 // expected-note {{prior use here}}
  %r = llzk.new_array %a, %b, %c, %d: !llzk.array<4 x !llzk.felt>
  // expected-error@+1 {{use of value '%v' expects different type than prior uses: '!llzk.felt' vs 'index'}}
  llzk.writearr %r[%i] = %v : !llzk.array<4 x !llzk.felt>, !llzk.felt
  return %r: !llzk.array<4 x !llzk.felt>
}
// -----

llzk.func @arr_wrong_array_elem_type(%a: !llzk.felt) -> !llzk.array<1 x !llzk.felt> {
  %i = index.constant 0
  %v = index.constant 632
  %r = llzk.new_array %a: !llzk.array<1 x !llzk.felt>
  // expected-error@+1 {{'llzk.writearr' op failed to verify that rvalue type matches with arr_ref element type}}
  llzk.writearr %r[%i] = %v : !llzk.array<1 x !llzk.felt>, index
  return %r: !llzk.array<1 x !llzk.felt>
}
